--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "pure-css-loader": "^3.3.1",
     "terser": "^3.14.1",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
