--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "jquery": "^3.3.1",
     "pure-css-loader": "^3.3.1",
