--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --no-clean",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "pure-css-loader": "^3.3.1",
     "terser": "^3.14.1",
     "vue": "^2.6.3",
+    "vue-navigation": "^1.1.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
