--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.3",
     "vue-navigation": "^1.1.4",
     "vue-router": "^3.0.1",
+    "vue-router-layout": "^0.1.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -28,6 +29,8 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "vue-auto-routing": "^0.3.0",
+    "vue-cli-plugin-auto-routing": "^0.2.1",
     "vue-template-compiler": "^2.6.3"
   }
 }
